feat: Adopt standard npm dependencies and build config
Replaces CDN loading with npm packages for pdfjs-dist, jszip, and lucide-react. Updates package.json scripts and dependencies, configures Vite for building, and adjusts tsconfig.json for modern TypeScript features. Updates README to reflect local setup instructions.

--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
     "react-dom": "https://esm.sh/react-dom@18.2.0?deps=react@18.2.0",
     "react-dom/": "https://esm.sh/react-dom@18.2.0/",
     "react-dom/client": "https://esm.sh/react-dom@18.2.0/client?deps=react@18.2.0",
-    "lucide-react": "https://esm.sh/lucide-react?deps=react@18.2.0"
+    "lucide-react": "https://esm.sh/lucide-react?deps=react@18.2.0",
+    "pdfjs-dist": "https://esm.sh/pdfjs-dist@3.11.174",
+    "jszip": "https://esm.sh/jszip@3.10.1"
   }
 }
 </script>
