--- a/index.html
+++ b/index.html
@@ -29,19 +29,20 @@
   <script type="importmap">
 {
   "imports": {
-    "react": "https://esm.sh/react@18.2.0",
-    "react/": "https://esm.sh/react@18.2.0/",
-    "react-dom": "https://esm.sh/react-dom@18.2.0?deps=react@18.2.0",
-    "react-dom/": "https://esm.sh/react-dom@18.2.0/",
-    "react-dom/client": "https://esm.sh/react-dom@18.2.0/client?deps=react@18.2.0",
-    "lucide-react": "https://esm.sh/lucide-react?deps=react@18.2.0",
-    "pdfjs-dist": "https://esm.sh/pdfjs-dist@3.11.174",
-    "jszip": "https://esm.sh/jszip@3.10.1"
+    "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
+    "vite": "https://esm.sh/vite@^7.3.0",
+    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+    "react/": "https://esm.sh/react@^19.2.3/",
+    "react": "https://esm.sh/react@^19.2.3",
+    "pdfjs-dist": "https://esm.sh/pdfjs-dist@^5.4.530",
+    "jszip": "https://esm.sh/jszip@^3.10.1"
   }
 }
 </script>
 </head>
   <body class="bg-slate-950">
     <div id="root"></div>
+    <script type="module" src="/index.tsx"></script>
   </body>
 </html>
