feat: Integrate SweetAlert2 for enhanced user feedback
This commit introduces SweetAlert2 to provide more visually appealing and informative user feedback, replacing generic browser alerts. It also simplifies password handling by removing output password functionality, focusing solely on source password unlocking. The necessary dependencies for SweetAlert2 are added to the import map.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>PDF 轉圖片神器 - 高效、安全、本地處理</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@sweetalert2/theme-dark@5/dark.min.css" />
     <script>
       // 阻擋 Tailwind CDN 的警告訊息
       const originalWarn = console.warn;
@@ -26,7 +27,7 @@
         }
       }
     </script>
-  <script type="importmap">
+    <script type="importmap">
 {
   "imports": {
     "react": "https://esm.sh/react@^19.2.3",
@@ -37,7 +38,8 @@
     "jszip": "https://esm.sh/jszip@^3.10.1",
     "jspdf": "https://esm.sh/jspdf@2.5.1",
     "vite": "https://esm.sh/vite@^7.3.0",
-    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2"
+    "@vitejs/plugin-react": "https://esm.sh/@vitejs/plugin-react@^5.1.2",
+    "sweetalert2": "https://esm.sh/sweetalert2@11"
   }
 }
 </script>
